# CS2Project

./: .gitignore  AVLTree.h  Authentication.cpp  BST.h  CMakeLists.txt  FriendManager.cpp  FriendsManager.cpp  Notification.cpp  Posts.cpp  Reviews.cpp  Reviews.h  UML.txt  UserSearchBST.cpp  Users.cpp  info.txt  main.cpp  notification.cpp  project_uml.md  timeline.cpp
assets/: index.html  index_new.html
database/: friends.json  pending_requests.json  posts.json  sessions.json  users.csv  users.json
include/: AVLTree.h  Authentication.h  FriendManager.h  FriendsManager.h  Notification.h  UserSearchBST.h  Users.h  timeline.h
